MSP-5223 update response CreateUpdateConfig: add IsChanged field
